syntax = "proto3";
package sell;

import "google/protobuf/empty.proto";

option go_package="./proto/sell";


message goods {
    uint32 id = 1;
    string name = 2;
}

message goodsInfo {
    goods g = 1;
    float price = 2;
    uint32 rest = 3;
}

message totalgoods {
    repeated goodsInfo total =1;
}

service deal{
    rpc GetGoodsInfo(goods) returns (goodsInfo){}
    rpc Consume(goods) returns (goodsInfo){}
    rpc ListGoods(google.protobuf.Empty) returns (totalgoods){}
}


